# agents

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  sample_crawler_config.json
.devcontainer/: devcontainer.json
scripts/: poetry-install.sh  poetry-lock-no-update.sh  poetry-lock-update.sh  projects.sh
shared/: pyproject.toml
shared/agents_shared/: agent_factory.py  env.py  logger.py
shared/core/: __init__.py  agent_factory.py  env.py  httpx_client.py  logger.py
