[tool.poetry]
name = "agents-monorepo"
version = "0.1.0"
description = "Agents Monorepo container"
license = "MIT"
readme = "README.md"
package-mode = false 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
ipython = "^7.29.0"
mypy = "0.910"
flake8 = "4.0.1"
dunamai = "^1.7.0"
