[project]
name = "agents-shared"
version = "0.1.0"
description = ""
packages = [{ include = "agents_shared" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
httpx = ">=0.28.1,<0.29.0"
dotenv = ">=0.9.9,<0.10.0"
pydantic = ">=2.11.3,<3.0.0"
pydantic-ai = ">=0.1.3,<0.2.0"
logfire = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
